--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "antwan <antwanvdm@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
     "node-cron": "^2.0.3"
