Refactored Storage to match style of project (sorry Colin ;-)) + added uuid to prevent future conflicts of user ids

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "removeComments": true,
     "noUnusedParameters": true,
     "strictNullChecks": false,
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "sourceMap": true
   }
