--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "antwan <antwanvdm@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^3.4.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^0.51.7",
