--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
   "author": "antwan <antwanvdm@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@types/uuid": "^3.4.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
-    "node-cron": "^2.0.3",
-    "uuid": "^3.3.2"
+    "node-cron": "^2.0.3"
   },
   "devDependencies": {
+    "@types/uuid": "^3.4.5",
     "@types/mapbox-gl": "^0.51.7",
     "bulma": "^0.7.5",
     "bulma-pageloader": "^2.1.0",
@@ -36,6 +35,7 @@
     "ts-loader": "^6.0.2",
     "typescript": "^3.5.1",
     "url-loader": "^2.0.0",
+    "uuid": "^3.3.2",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2"
   }
