--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Adventure Go",
   "short_name": "Adventure Go",
-  "theme_color": "#f32121",
+  "theme_color": "#ffc40d",
   "background_color": "#ffffff",
   "display": "fullscreen",
   "orientation": "portrait",
