--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "mongodb": "^3.2.7",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "passport": "^0.4.0",
+    "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
     "@types/uuid": "^3.4.5",
