--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "mapbox-gl": "^2.9.2",
     "mongodb": "^4.8.0",
-    "node-cron": "^3.0.1",
     "passport": "^0.6.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "uuid": "^8.3.2",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.7.5",
@@ -29,7 +31,6 @@
     "bulma": "^0.9.4",
     "bulma-pageloader": "^0.3.0",
     "css-loader": "^6.7.1",
-    "mapbox-gl": "^2.9.2",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.19",
@@ -37,7 +38,6 @@
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
-    "uuid": "^8.3.2",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
